# MT5CTRL

./: .env  .gitignore  LICENSE  README.md  mt5ctrl.py  pair_trade.py  pyproject.toml  setting.env
backtest/: backtest.py
backtest/pair_trade/: .env  backtest.py  optimize.py
trade/pair_trade/: .env  pair_trade.py
